# polariseq

./: .gitignore  Cargo.toml  EBIDownload.yaml  README.md  clean.py  polariseq.yaml
crates/ebidownload-cli/: Cargo.toml
crates/ebidownload-cli/src/: main.rs
crates/ebidownload-core/: Cargo.toml
crates/ebidownload-core/src/: aws_s3.rs  ftp.rs  lib.rs  md5.rs  prefetch.rs  progress.rs
crates/ebidownload-core/src/public_data/: config.rs  downloader.rs  mod.rs  s3.rs  validator.rs
crates/ebidownload-core/src/upload/: mod.rs
crates/ebidownload-gui/: index.html  package-lock.json  package.json  vite.config.ts
crates/ebidownload-gui/src/: App.tsx  styles.css
crates/ebidownload-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ebidownload-gui/src-tauri/src/: app.rs  lib.rs  logger.rs  main.rs
crates/polariseq-cli/: Cargo.toml
crates/polariseq-cli/src/: main.rs  ui_manager.rs
crates/polariseq-core/: Cargo.toml
crates/polariseq-core/src/: aws_s3.rs  lib.rs  md5.rs  prefetch.rs  progress.rs
crates/polariseq-gui/: package-lock.json  package.json
crates/polariseq-gui/src/: App.tsx
crates/polariseq-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/polariseq-gui/src-tauri/src/: app.rs
docs/: CHANGELOG.md  CLI_DISPLAY_STYLE.md  GUI_IMPLEMENTATION.md  README_zh.md  TODO_v1.md  downlaod_ARCHITECTURE.md  external_deps_problem.md
docs/26.7.15/: EBIDownload_public_data_arch.md
scripts/: clean.py
src/: main.rs
