[package]
name = "ebidownload-cli"
version = "1.3.7"
edition = "2021"

[[bin]]
name = "EBIDownload"
path = "src/main.rs"

[dependencies]
ebidownload-core = { path = "../ebidownload-core", features = ["cli"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "local-time", "time", "json"] }
indicatif = "0.17"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls", "stream", "gzip"] }
