[package]
name = "polariseq-cli"
version = "1.4.3"
edition = "2021"

[[bin]]
name = "polariseq"
path = "src/main.rs"

[dependencies]
polariseq-core = { path = "../polariseq-core", features = ["cli"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "local-time", "time", "json"] }
nu-ansi-term = "0.50"
indicatif = "0.17"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls", "stream", "gzip"] }
axum = "0.7"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
md5 = "0.7"
