[package]
name = "polariseq-core"
version = "1.4.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls", "stream", "gzip", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi", "env-filter", "local-time", "time"] }
futures = "0.3"
regex = "1.10"
indicatif = "0.17"
md5 = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.6"
thiserror = "1.0"
gzp = "0.11"
quick-xml = "0.36"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1" }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.4", features = ["derive"], optional = true }
tar = "0.4"
flate2 = "1.0"
dirs = "5.0"
which = "6.0"
tempfile = "3.10"
wildmatch = "2"

[dev-dependencies]

[features]
default = []
cli = ["dep:clap"]
