[package]
name = "ebidownload"
version = "1.3.7"
description = "EBIDownload - Download sequencing data from EBI and NCBI"
authors = ["EBIDownload contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
ebidownload-core = { path = "../../ebidownload-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"

[lib]
name = "ebidownload"
path = "src/lib.rs"

[[bin]]
name = "ebidownload"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
