[package]
name = "polariseq"
version = "1.4.3"
description = "Polariseq - Download sequencing data from EBI and NCBI"
authors = ["Polariseq contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
polariseq-core = { path = "../../polariseq-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4"

[lib]
name = "polariseq"
path = "src/lib.rs"

[[bin]]
name = "polariseq"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
